deploy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - name: dapr-api
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: gateway_http
                codec_type: AUTO
                route_config:
                  name: malenia_backend_route
                  virtual_hosts:
                    - name: malenia_backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/api/kc/" }
                          route: { auto_host_rewrite: true, prefix_rewrite: "/", cluster: dapr }
                          request_headers_to_add:
                            - header:
                                key: dapr-app-id
                                value: kc
                        - match: { prefix: "/s/" }
                          route: { auto_host_rewrite: true, prefix_rewrite: "/v1.0/invoke/sample-server/method/", cluster: dapr}
                        - match: { prefix: "/sample-server/" }
                          route: { auto_host_rewrite: true, prefix_rewrite: "/v1.0/invoke/sample-server/method/", cluster: dapr }
                        - match: { prefix: "/helloworld.Greeter" }
                          route: { cluster: dapr_grpc, timeout: { seconds: 3 } }
                          request_headers_to_add:
                            - header:
                                key: dapr-app-id
                                value: sample-server
                        - match: { prefix: "/iam.IdentityAccessManagement"}
                          route: { cluster: dapr_grpc, timeout: { seconds: 3 }}
                          request_headers_to_add:
                            - header:
                                key: dapr-app-id
                                value: iam
                        - match: { prefix: "/cr.Hub"}
                          route: { cluster: dapr_grpc, timeout: { seconds: 3 }}
                          request_headers_to_add:
                            - header:
                                key: dapr-app-id
                                value: cr
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/data/proto.pb"
                      services: ["helloworld.Greeter", "iam.IdentityAccessManagement", "cr.Hub"]
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        initial_metadata:
                          - key: dapr-app-id
                            value: iam
                        envoy_grpc:
                          cluster_name: iam
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: dapr
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3500
    - name: dapr_grpc
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: dapr_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50001
    - name: iam
      type: static
      connect_timeout: 0.25s
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      load_assignment:
        cluster_name: iam
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50001
