deploy/gateway.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apigateway
  labels:
    app: malenia
    service: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      service: apigateway
  template:
    metadata:
      labels:
        app: malenia
        service: apigateway
      annotations:
        dapr.io/app-id: apigateway
        dapr.io/app-port: "10000"
        dapr.io/config: malenia-dapr-config
        dapr.io/enabled: "true"
        dapr.io/log-level: debug
    spec:
      containers:
        - name: apigateway
          image: envoyproxy/envoy:v1.24-latest
          imagePullPolicy: IfNotPresent
          args: [ "-c", "/etc/envoy/envoy.yaml", "-l", "off", "--component-log-level", "upstream:debug,connection:trace"]
          ports:
            - name: http
              containerPort: 10000
              protocol: TCP
            - name: admin
              containerPort: 8001
              protocol: TCP
            - name: daprhttp
              containerPort: 3500
              protocol: TCP
            - name: daprgrpc
              containerPort: 50001
              protocol: TCP
          volumeMounts:
          - mountPath: /etc/envoy/
            name: gateway-config
          - mountPath: /data/
            name: gateway-proto
          - mountPath: /etc/localtime
            name: host-time
            readOnly: true
      volumes:
        - configMap:
            defaultMode: 420
            name: gateway-config
          name: gateway-config
        - configMap:
            defaultMode: 420
            name: gateway-proto
          name: gateway-proto
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
---

kind: Service
apiVersion: v1
metadata:
  name: apigateway
  labels:
    app: malenia
    service: apigateway
spec:
  ports:
    - port: 80
      targetPort: 10000
      protocol: TCP
      name: http
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: admin
    - port: 3500
      targetPort: 3500
      protocol: TCP
      name: daprhttp
    - port: 50001
      targetPort: 50001
      protocol: TCP
      name: daprgrpc
  selector:
    service: apigateway
