deploy/kc-server.yaml
apiVersion: dapr.io/v1alpha1
kind: Configuration
metadata:
  name: malenia-kc-server-config
spec:
  metric:
    enabled: true
  mtls:
    allowedClockSkew: 15m
    enabled: true
    workloadCertTTL: 24h
  tracing:
    samplingRate: "1"
    zipkin:
      endpointAddress: http://zipkin.default.svc.cluster.local:9411/api/v2/spans
  features:
    - name: AppHealthCheck
      enabled: true
  accessControl:
    defaultAction: deny
    trustDomain: "public"
    policies:
      - appId: apigateway
        defaultAction: allow
        trustDomain: "public"
        namespace: "default"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-server
  labels:
    app: malenia
    service: kc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: malenia
      service: kc-server
  template:
    metadata:
      labels:
        app: malenia
        service: kc-server
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: kc
        dapr.io/app-port: "5000"
        dapr.io/app-protocol: http
        dapr.io/config: malenia-kc-server-config
        dapr.io/enable-app-health-check: "true"
        dapr.io/app-health-check-path: "/health"
        dapr.io/app-health-probe-interval: "3"
        dapr.io/app-health-probe-timeout: "200"
        dapr.io/app-health-threshold: "2"
    spec:
      containers:
        - name: server
          image: hanamichi/kc-server:latest
          imagePullPolicy: Always
          command:
            - kc-server
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/localtime
              name: host-time
              readOnly: true
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
---
apiVersion: v1
kind: Service
metadata:
  name: kc-server
  labels:
    app: malenia
    service: kc-server
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: malenia
    service: kc-server
