deploy/sample-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-server
  labels:
    app: malenia
    service: sample-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: malenia
      service: sample-server
  template:
    metadata:
      labels:
        app: malenia
        service: sample-server
      annotations:
        dapr.io/app-id: sample-server
        dapr.io/app-port: "5000"
        dapr.io/app-protocol: grpc
        dapr.io/config: malenia-dapr-config
        dapr.io/enabled: "true"
    spec:
      containers:
        - name: server
          image: hanamichi/sample-server:latest
          imagePullPolicy: IfNotPresent
          command:
            - sample-server
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/localtime
              name: host-time
              readOnly: true
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
---
apiVersion: v1
kind: Service
metadata:
  name: sample-server
  labels:
    app: malenia
    service: sample-server
spec:
  ports:
    - name: grpc
      port: 5000
      targetPort: 5000
  selector:
    app: malenia
    service: sample-server
